GNOME Bugzilla – Bug 777427
(Month view) Other n events button listed in some other column in RTL languages
Last modified: 2017-08-22 23:58:53 UTC
Created attachment 343697 [details] more events in Arabic (image) the 'Other n events' is listed in the coloumn opposite to the one it is supposed to be shown in RTL languages. How to reproduce: 1. Open gnome-calendar with some RTL locale LANG=ar_SA jhbuild run gnome-calendar 2. Add several events to the same date until 'Other n events' button (its translation actually) is shown Eg: Add to Jan 28, 2017. Result: The 'Other n events' is shown in Jan 24th. Please see the attached screenshot. Also note that the events in popover is rendered such that it has some continuation (which may be related to bug 777426) Thanks
Is this still happening on master?
(In reply to Georges Basile Stavracas Neto from comment #1) > Is this still happening on master? Yes
Created attachment 355906 [details] [review] month-view : correct overflow label position on rtl This patch is complimentary to the patch at this bug https://bugzilla.gnome.org/show_bug.cgi?id=777426.
I think this bug needs some attention. Has this bug been fixed.
Review of attachment 355906 [details] [review]: This patch indeed fixes the rendering issue, but doesn't fix the mouse interaction. So now, the overflow label is rendered correctly, but I can't click on it (I have to click on the "wrong" cell to see the overflow popover). ::: src/views/gcal-month-view.c @@ +1664,3 @@ /* FIXME: hardcoded padding of the number background */ gtk_render_background (context, cr, + cell_width * (column), Remove the ()s
Created attachment 358101 [details] [review] [PATCH V2] month-view : correct overflow label position on rtl This bug is somehow the second part of this bug https://bugzilla.gnome.org/show_bug.cgi?id=777426. That is why click will not be possible when one only apply this patch alone. But now should be okay since that bug is fixed.
Review of attachment 358101 [details] [review]: LGTM
Thanks for the fix. I'm very happy you're working on improving Calendar's behavior on RTL languages =) Attachment 358101 [details] pushed as d9a775e - month-view : correct overflow label position on rtl